[P4ADEV-131] transactions additional fields
